# gustyfring

./: .env.example  .gitignore  Cargo.toml  README.md
src/: bot.rs  main.rs  redis.rs  utterance.rs
src/common/: bot.rs  constants.rs  mod.rs  text.rs
src/db/: models.rs  seed.sql  sqlite.rs
tools/: README.md
